--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
 	url = git://github.com/tpope/vim-surround.git
+[submodule "bundle/syntax_glsl"]
+	path = bundle/syntax_glsl
+	url = git://github.com/beyondmarc/glsl.vim.git
