--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/syntax_glsl"]
 	path = bundle/syntax_glsl
 	url = git://github.com/beyondmarc/glsl.vim.git
+[submodule "bundle/vim-expand-region"]
+	path = bundle/vim-expand-region
+	url = git://github.com/terryma/vim-expand-region.git
