--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,3 @@
-[submodule "bundle/dwm"]
-	path = bundle/dwm
-	url = git://github.com/spolu/dwm.vim.git
-[submodule "bundle/nerdcommenter"]
-	path = bundle/nerdcommenter
-	url = git://github.com/scrooloose/nerdcommenter.git
-[submodule "bundle/supertab"]
-	path = bundle/supertab
-	url = git://github.com/ervandew/supertab.git
-[submodule "bundle/syntastic"]
-	path = bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
-[submodule "bundle/vim-surround"]
-	path = bundle/vim-surround
-	url = git://github.com/tpope/vim-surround.git
-[submodule "bundle/syntax_glsl"]
-	path = bundle/syntax_glsl
-	url = git://github.com/beyondmarc/glsl.vim.git
-[submodule "bundle/vim-expand-region"]
-	path = bundle/vim-expand-region
-	url = git://github.com/terryma/vim-expand-region.git
+[submodule "bundle/neobundle"]
+	path = bundle/neobundle.vim
+	url = git://github.com/Shougo/neobundle.vim
